logo fix align

--- a/src/app/views/landing/Header-Listingdetailsone/Header-Listingdetailsone.component.css
+++ b/src/app/views/landing/Header-Listingdetailsone/Header-Listingdetailsone.component.css
@@ -130,5 +130,5 @@ body {
   height: 100px;
   border-radius: 50%;
   padding: 10px;
-
+  margin-left: 78px;
 }
